--- a/test.css
+++ b/test.css
@@ -100,10 +100,13 @@ margin: -82px auto 2rem auto;
 padding: 0.5rem;
 }
 #description
+{#description
 {
     padding: 2.5rem;
     margin-left: -33px;
     font-family: sh;
+    font-weight:bolder;
+}
 }
 .column-image
 {
