--- a/test.css
+++ b/test.css
@@ -106,7 +106,6 @@ padding: 0.5rem;
     font-family: sh;
     font-weight:bolder;
 }
-
 .column-image
 {
     margin-top: -42px;
@@ -145,6 +144,7 @@ input:checked+label
     p{
         margin: -65px auto 1rem auto;
         padding: 1.7rem;
+        font-weight: 600;
         }
         .r1{
             height: 50px;
@@ -174,6 +174,8 @@ input:checked+label
             height: auto;
             display: block;
           }
+
+         
           
         
 
